cc.creativecomputing/log/noname-2011-07-04_12-04-35.txt
[Mon Jul 04 12:04:35 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/noname-2011-07-04_12-04-35.txt
[Mon Jul 04 12:04:35 CEST 2011] [CCApp:display] [SEVERE] java.lang.reflect.UndeclaredThrowableException
	at $Proxy0.setup(Unknown Source)
	at cc.creativecomputing.CCApp.display(CCApp.java:559)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4812)
	at java.awt.Component.dispatchEvent(Component.java:4566)
	at java.awt.EventQueue.dispatchEventImpl(EventQueue.java:680)
	at java.awt.EventQueue.access$000(EventQueue.java:86)
	at java.awt.EventQueue$1.run(EventQueue.java:639)
	at java.awt.EventQueue$1.run(EventQueue.java:637)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.security.AccessControlContext$1.doIntersectionPrivilege(AccessControlContext.java:87)
	at java.security.AccessControlContext$1.doIntersectionPrivilege(AccessControlContext.java:98)
	at java.awt.EventQueue$2.run(EventQueue.java:653)
	at java.awt.EventQueue$2.run(EventQueue.java:651)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.security.AccessControlContext$1.doIntersectionPrivilege(AccessControlContext.java:87)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:650)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)
Caused by: java.lang.reflect.InvocationTargetException
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:39)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:25)
	at java.lang.reflect.Method.invoke(Method.java:597)
	at cc.creativecomputing.events.CCListenerManager$ProxyInvocationHandler.invoke(CCListenerManager.java:170)
	... 31 more
Caused by: com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:150:20: error: use of undeclared identifier '_myWidth'
                 float dt0 = dt * _myWidth;
                                  ^
<program source>:153:14: error: use of undeclared identifier 'x'
                 float ax = x - dt0 * du[index(x, y)];
                            ^
<program source>:154:14: error: use of undeclared identifier 'y'
                 float ay = y - dt0 * dv[index(x, y)];
                            ^
<program source>:173:9: error: redefinition of 's1'
                 float s1 = ax - i0;
                       ^
<program source>:148:16: note: previous definition is here
         float s0, t0, s1, t1;
                       ^
<program source>:174:9: error: redefinition of 's0'
                 float s0 = 1 - s1;
                       ^
<program source>:148:8: note: previous definition is here
         float s0, t0, s1, t1;
               ^
<program source>:175:9: error: redefinition of 't1'
                 float t1 = ay - j0;
                       ^
<program source>:148:20: note: previous definition is here
         float s0, t0, s1, t1;
                           ^
<program source>:176:9: error: redefinition of 't0'
                 float t0 = 1 - t1;
                       ^
<program source>:148:12: note: previous definition is here
         float s0, t0, s1, t1;
                   ^
<program source>:178:16: error: use of undeclared identifier 'x'
                 theOut[index(x, y)] = 
                              ^
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:150:20: error: use of undeclared identifier '_myWidth'
                 float dt0 = dt * _myWidth;
                                  ^
<program source>:153:14: error: use of undeclared identifier 'x'
                 float ax = x - dt0 * du[index(x, y)];
                            ^
<program source>:154:14: error: use of undeclared identifier 'y'
                 float ay = y - dt0 * dv[index(x, y)];
                            ^
<program source>:173:9: error: redefinition of 's1'
                 float s1 = ax - i0;
                       ^
<program source>:148:16: note: previous definition is here
         float s0, t0, s1, t1;
                       ^
<program source>:174:9: error: redefinition of 's0'
                 float s0 = 1 - s1;
                       ^
<program source>:148:8: note: previous definition is here
         float s0, t0, s1, t1;
               ^
<program source>:175:9: error: redefinition of 't1'
                 float t1 = ay - j0;
                       ^
<program source>:148:20: note: previous definition is here
         float s0, t0, s1, t1;
                           ^
<program source>:176:9: error: redefinition of 't0'
                 float t0 = 1 - t1;
                       ^
<program source>:148:12: note: previous definition is here
         float s0, t0, s1, t1;
                   ^
<program source>:178:16: error: use of undeclared identifier 'x'
                 theOut[index(x, y)] = 
                              ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:188)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:182)
	at cc.creativecomputing.particles.forces.CCFluidSolver.<init>(CCFluidSolver.java:62)
	at cc.creativecomputing.particles.forces.CCFluidSolverDemo.reset(CCFluidSolverDemo.java:46)
	at cc.creativecomputing.particles.forces.CCFluidSolverDemo.setup(CCFluidSolverDemo.java:51)
	... 36 more

